--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 
-h6, .h6, h5, .h5, h4, .h4, h3, .h3,, h1, .h1 {
+h6, .h6, h5, .h5, h4, .h4, h3, .h3, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-family:bs-font-family: 'Carrois Gothic SC', sans-serif;
